.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Salary_Review__c.object
<CustomObject>
    <description>Overall data about salary review - period, default rates etc</description>
    <fields>
        <fullName>xcdhcm__Companies__c</fullName>
        <inlineHelpText>Employees from selected Companies will be included in the Review</inlineHelpText>
        <label>Companies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TEST RD</fullName>
                </value>
                <value>
                    <fullName>TEST RD 2</fullName>
                </value>
                <value>
                    <fullName>XCD HRMS Testing Company name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost_of_bonus__c</fullName>
        <inlineHelpText>Total bonus cost for selected Employees</inlineHelpText>
        <label>Cost of bonus</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost_of_salary_uplift__c</fullName>
        <inlineHelpText>Total cost of the salary uplift for selected Employees</inlineHelpText>
        <label>Cost of salary uplift</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_of_bonus_award__c</fullName>
        <inlineHelpText>Date on which employees will receive bonus</inlineHelpText>
        <label>Date of bonus award</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Default_bonus__c</fullName>
        <inlineHelpText>Sets a default bonus as % of each Employee&apos;s OTE or target bonus</inlineHelpText>
        <label>Default bonus % target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Default_salary_uplift__c</fullName>
        <inlineHelpText>Sets a default salary uplift for all Employees</inlineHelpText>
        <label>Default salary uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Department__c</fullName>
        <inlineHelpText>Employees from selected Departments will be included in the Review</inlineHelpText>
        <label>Departments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT Development</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Employment_status__c</fullName>
        <inlineHelpText>Employees with selected Status will be included in the Review</inlineHelpText>
        <label>Employment status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                    <default>true</default>
                    <label>Permanent</label>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Agency temp</fullName>
                </value>
                <value>
                    <fullName>FTC</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
                <value>
                    <fullName>Apprentice</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Final_review_due__c</fullName>
        <inlineHelpText>Stage 3 cutoff date</inlineHelpText>
        <label>Third review due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__First_review_due__c</fullName>
        <inlineHelpText>Stage 1 cutoff date</inlineHelpText>
        <label>First review due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Fourth_review_due__c</fullName>
        <inlineHelpText>Stage 4 cutoff date</inlineHelpText>
        <label>Final review due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Latest_employee_continuous_service_date__c</fullName>
        <inlineHelpText>Employees starting after this date will be included in the Review</inlineHelpText>
        <label>Latest employee continuous service date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Management_reviews__c</fullName>
        <inlineHelpText>Number of stages in Review process</inlineHelpText>
        <label>Management reviews</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>xcdhcm__Reviewers__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_status__c</fullName>
        <label>Salary  review status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>xcdhcm__Review_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewers__c</fullName>
        <inlineHelpText>Identifies default Reviewers</inlineHelpText>
        <label>Reviewers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manager hierarchy</fullName>
                    <default>true</default>
                    <label>Manager hierarchy</label>
                </value>
                <value>
                    <fullName>Administrators</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Salary_increase_effective_from__c</fullName>
        <inlineHelpText>Date from which employees will receive new salary</inlineHelpText>
        <label>Salary increase effective from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Second_review_due__c</fullName>
        <inlineHelpText>Stage 2 cutoff date</inlineHelpText>
        <label>Second review due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Target_publication_date__c</fullName>
        <inlineHelpText>Salaries to be published to Employees on this date</inlineHelpText>
        <label>Target publication date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__View_salary_review_link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&apos;apex/MyTeam&apos;</formula>
        <label>View salary review link</label>
        <type>Text</type>
    </fields>
    <label>Salary Review</label>
    <nameField>
        <label>Salary review name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>xcdhcm__XCD_Sharing__c</fullName>
        <label>XCD_Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>xcdhcm__Unique_Salary_Review_name</fullName>
        <active>true</active>
        <description>used to have unique salary review name</description>
        <errorConditionFormula>AND( 
OR( 
ISNEW(), 
ISCHANGED( Name )
), 
NOT( 
ISBLANK ( 
VLOOKUP( $ObjectType.xcdhcm__Salary_Review__c.Fields.Name,$ObjectType.xcdhcm__Salary_Review__c.Fields.Name,  Name )
)
)
)</errorConditionFormula>
        <errorMessage>Salary Review with this name already exist, please enter unique name</errorMessage>
    </validationRules>
</CustomObject>